package com.example.patronesDeDiseno.Creacionales.Prototype;

public interface Shape {
    Shape clone();
    void draw();
}
